
Mon Jul 17 15:16:26 EDT 1995	Paul Park	(pjpark@mit.edu)
	* alt_prof.c - Add krb5_{read,free}_realm_params() to read in per-
		realm KDC data and to free the allocated structure.


Fri Jul 7 16:23:57 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove LDFLAGS, it's set by configure.  Find com_err
		library in TOPLIBD now.

Thu Jul  6 17:34:22 1995  Tom Yu  <tlyu@lothlorien.MIT.EDU>

	* adm_conn.c (kadm_get_creds): Pass kcontext to os_localaddr.

Tue Jun 27 15:50:31 EDT 1995	Paul Park	(pjpark@mit.edu)
	* alt_prof.c - Change filename and hierarchy lists to be const char.


Thu Jun 22 11:56:15 EDT 1995	Paul Park	(pjpark@mit.edu)
	* alt_prof.c - New jacket routines for handling profiles.  This includes
		the ability to parse certain string values to appropriate types
		(e.g. delta time or 32-bit integer).
	* Makefile.in - Add alt_prof.c


Thu Jun 15 18:03:40 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove explicit copying of archive library to library
		directory.
	* configure.in - Create symlink for archive when we build it.

Wed Jun 14 14:36:13 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* t_dbentry.c (main): option should be an int so that comparisons
        against EOF work when char unsigned.

Tue Jun 13 14:37:25 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* logger.c: Don't check to make sure unix is defined for
        DEVICE_OPEN et al.  Currently, there are no special cases where
        special handling is required; if they are, then they should be
        checked for, and the generic case taken if no special case fits.
        The previous behavior broke under AIX.


Sun Jun 11 09:24:06 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (clean-unix): Remove $(UNIX_OBJS)

Sat Jun 10 23:05:23 1995  Tom Yu  (tlyu@dragons-lair)

	* adm_conn.c, adm_rw.c: krb5_auth_context redefinitions

Fri Jun  9 19:26:44 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which